Fix ViewPort issue on smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,10 @@
 }
 
 /* Enforce dark mode styles always */
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
